@@ -9,16 +9,15 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class TeacherAssignmentService {
 
     private final SubjectAssignmentRepository subjectAssignmentRepository;
     private final AcademicCalendarUtil academicCalendarUtil;
 
-    @Transactional(readOnly = true)
     public List<TeacherAssignmentResponse> getMyAssignments(Long teacherId) {
         int currentYear = academicCalendarUtil.getCurrentAcademicYear();
         int currentSemester = academicCalendarUtil.getCurrentSemester();
@@ -35,6 +34,6 @@ public class TeacherAssignmentService {
                         .classNum(assignment.getClassroom().getClassNum())
                         .subjectId(assignment.getSubject().getId())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
     }
 }
